fix: turn label visible when displaying the error retry button (#90)

fix #89

--- a/packages/components/ng-ovh-sidebar-menu/src/index.less
+++ b/packages/components/ng-ovh-sidebar-menu/src/index.less
@@ -211,7 +211,6 @@
 
       button.btn.btn-default {
         margin-top: 5px;
-        color: #fff;
       }
     }
 
